--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Full Stack Developer | Cloud | DevOps | AI — Personal Portfolio" />
   <meta name="keywords" content="full stack developer, cloud engineer, devops, AI, AWS, Python, Django, Docker" />
-  <meta property="og:title" content="YOUR_NAME — Full Stack Developer" />
-  <meta property="og:description" content="Portfolio of a Full Stack Developer specializing in Cloud, DevOps, and AI." />
+  <meta property="og:title" content="Vardan Verma — Full Stack Developer" />
+  <meta property="og:description" content="Portfolio of Vardan Verma — Full Stack Developer specializing in Cloud, DevOps, and AI." />
   <meta property="og:type" content="website" />
-  <title>YOUR_NAME — Full Stack Developer</title>
+  <title>Vardan Verma — Full Stack Developer</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <!-- Devicons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.16.0/devicon.min.css" />
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
