--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </button>
       <ul class="nav-links" id="nav-links">
         <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#stack">Stack</a></li>
         <li><a href="#pipeline">Pipeline</a></li>
         <li><a href="#ai">AI</a></li>
@@ -89,6 +90,15 @@
     </div>
   </section>
 
+  <!-- EDUCATION -->
+  <section id="education">
+    <div class="container">
+      <div class="section-label">Academic Background</div>
+      <h2 class="section-title">Education</h2>
+      <div class="education-list" id="education-list"></div>
+    </div>
+  </section>
+
   <!-- TECH STACK -->
   <section id="stack">
     <div class="container">
@@ -102,8 +112,8 @@
   <section id="pipeline">
     <div class="container">
       <div class="section-label">How I Ship Code</div>
-      <h2 class="section-title">AWS CI/CD Pipeline</h2>
-      <p class="section-sub">From a single commit to a live AWS deployment — automated, tested, and monitored.</p>
+      <h2 class="section-title">Delivery Pipeline</h2>
+      <p class="section-sub">From first commit to live production — cloud-deployed, directly hosted, and fully monitored.</p>
       <div class="pipeline-track" id="pipeline-track"></div>
     </div>
   </section>
@@ -140,12 +150,32 @@
     </div>
   </section>
 
+  <!-- SOFT SKILLS -->
+  <section id="softskills">
+    <div class="container">
+      <div class="section-label">Beyond the Code</div>
+      <h2 class="section-title">Soft Skills</h2>
+      <p class="section-sub">Engineering is a human discipline. These are the traits I bring to every team, client, and project.</p>
+      <div class="softskills-grid" id="softskills-grid"></div>
+    </div>
+  </section>
+
+  <!-- AVAILABILITY -->
+  <section id="availability">
+    <div class="container">
+      <div class="section-label">Open To</div>
+      <h2 class="section-title">How I Can Help</h2>
+      <p class="section-sub">Whether you need a consultant, a tutor, a collaborator, or a delivery partner — I'm available.</p>
+      <div class="availability-grid" id="availability-grid"></div>
+    </div>
+  </section>
+
   <!-- CONTACT -->
   <section id="contact">
     <div class="container">
       <div class="section-label">Get In Touch</div>
       <h2 class="section-title">Let's Work Together</h2>
-      <p class="section-sub">I'm open to freelance projects, full-time roles, and interesting collaborations.</p>
+      <p class="section-sub">I'm open to freelance projects, full-time roles, consulting, and interesting collaborations.</p>
       <div class="contact-cards" id="contact-cards"></div>
     </div>
   </section>
