--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Full Stack Developer | Cloud | DevOps | AI — Personal Portfolio" />
+  <meta name="description" content="Vardan Verma - Full Stack Developer, Cloud, DevOps & AI" />
   <meta name="keywords" content="full stack developer, cloud engineer, devops, AI, AWS, Python, Django, Docker" />
-  <meta property="og:title" content="Vardan Verma — Full Stack Developer" />
-  <meta property="og:description" content="Portfolio of Vardan Verma — Full Stack Developer specializing in Cloud, DevOps, and AI." />
+  <meta property="og:title" content="Vardan Verma - Full Stack Developer" />
+  <meta property="og:description" content="Portfolio of Vardan Verma, Full Stack Developer specializing in Cloud, DevOps, and AI." />
   <meta property="og:type" content="website" />
-  <title>Vardan Verma — Full Stack Developer</title>
+  <title>Vardan Verma - Full Stack Developer</title>
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -113,7 +113,7 @@
     <div class="container">
       <div class="section-label">How I Ship Code</div>
       <h2 class="section-title">Delivery Pipeline</h2>
-      <p class="section-sub">From first commit to live production — cloud-deployed, directly hosted, and fully monitored.</p>
+      <p class="section-sub">From first commit to live production. Cloud-deployed, directly hosted, and fully monitored.</p>
       <div class="pipeline-track" id="pipeline-track"></div>
     </div>
   </section>
@@ -155,7 +155,7 @@
     <div class="container">
       <div class="section-label">Beyond the Code</div>
       <h2 class="section-title">Soft Skills</h2>
-      <p class="section-sub">Engineering is a human discipline. These are the traits I bring to every team, client, and project.</p>
+      <p class="section-sub">Building software is a team sport. Here's what I bring to the table beyond just writing code.</p>
       <div class="softskills-grid" id="softskills-grid"></div>
     </div>
   </section>
@@ -165,7 +165,7 @@
     <div class="container">
       <div class="section-label">Open To</div>
       <h2 class="section-title">How I Can Help</h2>
-      <p class="section-sub">Whether you need a consultant, a tutor, a collaborator, or a delivery partner — I'm available.</p>
+      <p class="section-sub">Need a consultant, a tutor, a collaborator, or someone to ship your project? Let's talk.</p>
       <div class="availability-grid" id="availability-grid"></div>
     </div>
   </section>
@@ -175,7 +175,7 @@
     <div class="container">
       <div class="section-label">Get In Touch</div>
       <h2 class="section-title">Let's Work Together</h2>
-      <p class="section-sub">I'm open to freelance projects, full-time roles, consulting, and interesting collaborations.</p>
+      <p class="section-sub">Open to freelance gigs, full-time roles, consulting, or any interesting collaboration.</p>
       <div class="contact-cards" id="contact-cards"></div>
     </div>
   </section>
